# AI-story-generator

backend/: database.db  main.py  pyproject.toml
backend/core/: config.py  models.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: story.py
frontend/src/: App.jsx  index.css
frontend/src/components/: LoadingStatus.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
