[project]
name = "ai-story-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "google-genai>=2.10.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
